[package]
name = "spl-binary-oracle-pair"
version = "0.1.0"
description = "Solana Program Library Binary Oracle Pair"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = { path = "../../../solana/sdk/program" }
spl-token = { version = "3.2", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
uint = "0.9"
arbitrary = { version = "0.4", features = ["derive"], optional = true }
borsh = "0.9.0"

[dev-dependencies]
solana-program-test = { path = "../../../solana/program-test" }
solana-sdk = { path = "../../../solana/sdk" }

[lib]
crate-type = ["cdylib", "lib"]
