[package]
name = "solana-backend"
version = "0.1.0"
authors = ["Cyber-Core Maintainers <maintainers@cyber-core.dev>"]
edition = "2018"

[dependencies]
evm = { path = "../rust-evm", version = "0.18.0", default_features = false }
solana-sdk = { version = "1.3.17", default-features = false, optional = true }
bs58 = "0.3.1"
primitive-types = { version = "0.7", default-features = false }
hex = "0.4.2"
sha3 = { version = "0.8", default-features = false }
arrayref = "0.3.6"
serde = "1.0.112"
serde_json = ""
num-traits = "0.2"
thiserror = ""

[dev-dependencies]
rand = { version = "0.7.0"}