[package]
name = "spl-feature-proposal"
version = "1.0.0"
description = "Solana Program Library Feature Proposal Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9"
borsh-derive = "0.9.0"
solana-program = { path = "../../../solana/sdk/program" }
spl-token = { version = "3.2", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = { path = "../../../solana/program-test" }
solana-sdk = { path = "../../../solana/sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
