[package]
name = "spl-governance"
version = "1.0.3"
description = "Solana Program Library Governance Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.126"
serde_derive = "1.0.103"
solana-program = { path = "../../../solana/sdk/program" }
spl-token = { version = "3.2", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
proptest = "1.0"
solana-program-test = { path = "../../../solana/program-test" }
solana-sdk = { path = "../../../solana/sdk" }

[lib]
crate-type = ["cdylib", "lib"]
