[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "Metamask Wrapper Command-line Utility"
edition = "2020"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "metamask-wrapper-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "1.0.0"

[dependencies]
clap = "2.33.3"
serde_json = "1.0.57"
solana-account-decoder = { version = "1.3.12" }
solana-clap-utils = { version = "1.3.12"}
solana-cli-config = { version = "1.3.12" }
solana-client = { version = "1.3.11" }
solana-logger = { version = "1.3.12" }
solana-sdk = { version = "1.3.12" }
metamask-wrapper = { version = "1.0.0", path="../program" }

[[bin]]
name = "metamask-wrapper"
path = "src/main.rs"
