
# Note: This crate must be built using do.sh

[package]
name = "metamask-wrapper"
version = "1.0.0"
description = "Metamask Wrapper"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
skip-no-mangle = ["solana-sdk/skip-no-mangle"]
program = ["solana-sdk/program", "spl-token/program", "spl-token/no-entrypoint"]
default = ["solana-sdk/default", "spl-token/default"]

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-sdk = { version = "1.3.12", default-features = false, optional = true }
spl-token = { path = "../../token/program", default-features = false, optional = true }
thiserror = "1.0"
arrayref = "0.3.6"
num_enum = "0.5.1"

[lib]
name = "metamask_wrapper"
crate-type = ["cdylib", "lib"]
