
# Note: This crate must be built using cargo build-bpf

[package]
name = "metamask-wrapper"
version = "1.0.0"
description = "Metamask Wrapper"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.5.11"
spl-token = { path = "../../token/program", default-features = false, features = [ "no-entrypoint" ] }
thiserror = "1.0"
arrayref = "0.3.6"
num_enum = "0.5.1"
hex = "0.4.2"
bs58 = "0.3.1"

[dev-dependencies]
solana-program-test = "1.5.11"
solana-sdk = "1.5.11"
tokio = { version = "0.3", features = ["macros"]}

[lib]
name = "metamask_wrapper"
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
