[package]
name = "spl-shared-memory"
version = "2.0.6"
description = "Solana Program Library Shared-memory"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
test-bpf = []

[dependencies]
arrayref = "0.3.6"
solana-program = { path = "../../../solana/sdk/program" }

[dev-dependencies]
solana-program-test = { path = "../../../solana/program-test" }
solana-sdk = { path = "../../../solana/sdk" }

[lib]
crate-type = ["cdylib", "lib"]
