[package]
name = "spl-stake-pool"
version = "0.4.0"
description = "Solana Program Library Stake Pool"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.9"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
serde = "1.0.126"
serde_derive = "1.0.103"
solana-program = { path = "../../../solana/sdk/program" }
spl-token = { version = "3.2", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
proptest = "1.0"
solana-program-test = { path = "../../../solana/program-test" }
solana-sdk = { path = "../../../solana/sdk" }
solana-vote-program = { path = "../../../solana/programs/vote" }

[lib]
crate-type = ["cdylib", "lib"]
