[package]
name = "spl_token_perf_monitor"
version = "0.0.1"
description = "SPL Token performance monitor"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[dev-dependencies]
rand = { version = "0.7.0"}
spl-token = { path = "../program", features = [ "no-entrypoint" ] }
solana-runtime = { path = "../../../solana/runtime" }
solana-sdk = { path = "../../../solana/sdk" }
solana-bpf-loader-program = { path = "../../../solana/programs/bpf_loader" }
solana_rbpf = "0.2"

[workspace]
