[package]
name = "spl-example-custom-heap"
version = "1.0.0"
description = "Solana Program Library Custom Heap Example"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
publish = false

[features]
default = ["custom-heap"]
custom-heap = []
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = { path = "../../../../solana/sdk/program" }

[dev-dependencies]
solana-program-test = { path = "../../../../solana/program-test" }
solana-sdk = { path = "../../../../solana/sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
